# pinot

./: AUTHORS  ChangeLog  ChangeLog-dijon  ChangeLog-svn  FAQ  Makefile.am  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  configure.in  globalconfig.xml  ltmain.sh  pinot-dbus-daemon.desktop  pinot-prefs.desktop  pinot.desktop  pinot.spec.in  textcat31_conf.txt  textcat32_conf.txt  textcat3_conf.txt  textcat_conf.txt
Collect/: CurlDownloader.cpp  CurlDownloader.h  DownloaderFactory.cpp  DownloaderFactory.h  DownloaderInterface.cpp  DownloaderInterface.h  FileCollector.cpp  FileCollector.h  Makefile.am  NeonDownloader.cpp  NeonDownloader.h
Core/: DBusServerThreads.cpp  DBusServerThreads.h  DaemonState.cpp  DaemonState.h  Makefile.am  OnDiskHandler.cpp  OnDiskHandler.h  PinotDBus_stub.cpp  PinotDBus_stub.h  PinotSettings.cpp  PinotSettings.h  SearchProvider_common.cpp  SearchProvider_common.h  SearchProvider_stub.cpp  SearchProvider_stub.h  ServerThreads.cpp  ServerThreads.h  UniqueApplication.cpp  UniqueApplication.h  WorkerThread.cpp  WorkerThread.h  WorkerThreads.cpp  WorkerThreads.h  com.github.fabricecolin.Pinot.search-provider.ini  com.github.fabricecolin.Pinot.service.in  pinot-daemon.1  pinot-dbus-daemon.1  pinot-dbus-daemon.cpp  pinot-dbus-daemon.xml  pinot-index.1  pinot-index.cpp  pinot-search.1  pinot-search.cpp
IndexSearch/: DBusIndex.cpp  DBusIndex.h  FieldMapperInterface.h  FilterWrapper.cpp  FilterWrapper.h  IndexInterface.h  Makefile.am  ModuleFactory.cpp  ModuleFactory.h  ModuleProperties.h  OpenSearchParser.cpp  OpenSearchParser.h  PinotDBus_proxy.cpp  PinotDBus_proxy.h  PluginParsers.h  PluginWebEngine.cpp  PluginWebEngine.h  QueryProperties.cpp  QueryProperties.h  ResultsExporter.cpp  ResultsExporter.h  SearchEngineInterface.cpp  SearchEngineInterface.h  SearchPluginProperties.cpp  SearchPluginProperties.h  SherlockParser.cpp  SherlockParser.h  WebEngine.cpp  WebEngine.h  XesamLog.h  pinot-label.1  pinot-label.cpp
IndexSearch/Google/: GAPI.nsmap  GAPIC.cpp  GAPIClient.cpp  GAPIClientLib.cpp  GAPIGoogleSearchBindingProxy.h  GAPIH.h  GAPIStub.h  GoogleAPIEngine.cpp  GoogleAPIEngine.h  GoogleSearch.h  Makefile.am  ModuleExports.cpp
IndexSearch/Plugins/: AmazonAPI.src  Arxiv.src  Bing.src  Clusty.src  Freecode.src  Google.src  KodersDescription.xml  OmegaDescription.xml  Topix.src  UNData.src  Wikipedia.src
IndexSearch/Xapian/: AbstractGenerator.cpp  AbstractGenerator.h  LanguageDetector.cpp  LanguageDetector.h  Makefile.am  ModuleExports.cpp  XapianDatabase.cpp  XapianDatabase.h  XapianDatabaseFactory.cpp  XapianDatabaseFactory.h  XapianEngine.cpp  XapianEngine.h  XapianIndex.cpp  XapianIndex.h
IndexSearch/XesamGLib/: Makefile.am  ModuleExports.cpp  XesamEngine.cpp  XesamEngine.h
IndexSearch/cjkv/: CJKVTokenizer.cc  CJKVTokenizer.h
Monitor/: INotifyMonitor.cpp  INotifyMonitor.h  Makefile.am  MonitorEvent.cpp  MonitorEvent.h  MonitorFactory.cpp  MonitorFactory.h  MonitorHandler.cpp  MonitorHandler.h  MonitorInterface.h
SQL/: ActionQueue.cpp  ActionQueue.h  CrawlHistory.cpp  CrawlHistory.h  Makefile.am  MetaDataBackup.cpp  MetaDataBackup.h  QueryHistory.cpp  QueryHistory.h  SQLDB.cpp  SQLDB.h  SQLiteBase.cpp  SQLiteBase.h  ViewHistory.cpp  ViewHistory.h
Tokenize/: FilterUtils.cpp  FilterUtils.h  Makefile.am  TextConverter.cpp  TextConverter.h
Tokenize/filters/: ArchiveFilter.cc  ArchiveFilter.h  ChmFilter.cc  ChmFilter.h  ExifImageFilter.cc  ExifImageFilter.h  Exiv2ImageFilter.cc  Exiv2ImageFilter.h  ExternalFilter.cc  ExternalFilter.h  FileOutputFilter.cc  FileOutputFilter.h  Filter.cc  Filter.h  FilterFactory.cc  FilterFactory.h  GMimeMboxFilter.cc  GMimeMboxFilter.h  HtmlFilter.cc  HtmlFilter.h  HtmlParser.cc  JsonFilter.cc  JsonFilter.h  TagLibMusicFilter.cc  TagLibMusicFilter.h  TarFilter.cc  TarFilter.h  TextFilter.cc  TextFilter.h  XmlFilter.cc  XmlFilter.h  external-filters.xml
UI/GTK2/: metase-gtk2.glade  metase-gtk2.gladep  metase-gtk3.gtkbuilder
UI/GTK2/src/: EnginesTree.hh  IndexPage.cc  IndexPage.hh  Makefile.am  ModelColumns.cc  Notebook.cc  UIThreads.hh  importDialog.cc  importDialog.hh  importDialog_glade.cc  importDialog_glade.hh  indexDialog.cc  indexDialog.hh  indexDialog_glade.cc  indexDialog_glade.hh  launcherDialog.cc  launcherDialog.hh  launcherDialog_glade.cc  launcherDialog_glade.hh  mainWindow.cc  mainWindow.hh  mainWindow_glade.cc  mainWindow_glade.hh  pinot.1  pinot.cc  prefsWindow.cc  prefsWindow.hh  prefsWindow_glade.cc  prefsWindow_glade.hh  propertiesDialog.cc  propertiesDialog.hh  propertiesDialog_glade.cc  propertiesDialog_glade.hh  queryDialog.cc  queryDialog.hh  queryDialog_glade.cc  queryDialog_glade.hh  statisticsDialog.cc  statisticsDialog.hh  statisticsDialog_glade.cc  (+1 more)
UI/GTK3/: metase-gtk3.gtkbuilder
UI/GTK3/src/: EnginesTree.cc  EnginesTree.cpp  EnginesTree.h  EnginesTree.hh  ImportDialog.cpp  ImportDialog.h  IndexDialog.h  IndexPage.cc  MainWindow.cpp  MainWindow.h  Makefile.am  (+43 more)
UI/GTK4/: pinot-gtk4.ui
UI/GTK4/src/: BuilderTranslations.h  EnginesTree.h  FileDialog.cpp  FileDialog.h  ImportDialog.cpp  ImportDialog.h  IndexDialog.cpp  IndexPage.cpp  IndexPage.h  LauncherDialog.cpp  LauncherDialog.h  Makefile.am  ModelColumns.cpp  Notebook.cpp  OkayDialog.cpp  PinotApplication.h  PrefsWindow.h  PropertiesDialog.cpp  QueryDialog.h  ResultsTree.h  StatisticsDialog.cpp  StatisticsDialog.h  UIThreads.cpp  YesNoDialog.cpp  pinot.1  pinot.cpp
UI/icons/: pinot.xcf
Utils/: CommandLine.cpp  CommandLine.h  Document.cpp  Document.h  DocumentInfo.cpp  DocumentInfo.h  Languages.cpp  Languages.h  MIMEScanner.cpp  MIMEScanner.h  Makefile.am  Memory.cpp  Memory.h  NLS.h  PinotDBus_common.cpp  PinotDBus_common.h  StringManip.cpp  StringManip.h  TimeConverter.cpp  TimeConverter.h  Timer.cpp  Timer.h  Url.cpp  Url.h  Visibility.h
po/: Makefile.in.in  Makevars  POTFILES.in  cs.po  de.po  es.po  fr.po  he.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  zh_CN.po  zh_TW.po
scripts/bash/: extract-gtk-builder-translations.sh  pinot-cd.sh  pinot-check-file.sh  pinot-enum-index.sh
